# utoipa-x-amazon-apigateway

./: Cargo.toml  LICENSE  README.md
examples/: pet_store.rs
src/: enums.rs  error.rs  extensions.rs  lib.rs  macro_rules.rs  structs.rs  traits.rs  utils.rs  x_amazon_apigateway.rs
src/extensions/: api.rs  operation.rs
src/structs/: operation.rs  root.rs
src/structs/operation/: request_validator.rs
src/structs/root/: api_key_source.rs  minimum_compression_size.rs  request_validators.rs
src/x_amazon_apigateway/: integration.rs  request_validators.rs
src/x_amazon_apigateway/integration/: request_parameters.rs  response.rs  response_parameters.rs  responses.rs  templates.rs  ty.rs
src/x_amazon_apigateway/request_validators/: named_request_validators.rs
