[package]
name = "utoipa-x-amazon-apigateway"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa     = { version = "5" }
serde      = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }
log        = { version = "0" }
thiserror  = { version = "2" }
strum      = { version = "0", features = [ "derive" ] }

